force-app/main/default/objects/Project_Status_Assignments__c/Project_Status_Assignments__c.object-meta.xml
<CustomObject>
    <label>Project Status Assignment</label>
    <nameField>
        <displayFormat>PRA{000000}</displayFormat>
        <label>Project Status Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Status Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>