force-app/main/default/objects/Project_Status_Assignments__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <formula>Assignment__r.pse__Billable_Hours_Submitted__c +  Assignment__r.pse__Non_Billable_Hours_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>