force-app/main/default/objects/Project_Status_Assignments__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSA Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Project Status Assignment</relationshipLabel>
    <relationshipName>Project_Status_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>