force-app/main/default/objects/Project_Status_Assignments__c/fields/Budgeted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Hours__c</fullName>
    <label>Budgeted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>