force-app/main/default/objects/Project_Status_Assignments__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Assignment__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>