force-app/main/default/objects/Project_Status_Assignments__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Status</label>
    <referenceTo>Project_Status__c</referenceTo>
    <relationshipLabel>Project Status Assignment</relationshipLabel>
    <relationshipName>Project_Status_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>