force-app/main/default/objects/Project_Status_Assignments__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <formula>Assignment__r.pse__Resource__r.FirstName &amp; &quot; &quot; &amp;  Assignment__r.pse__Resource__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource</label>
    <type>Text</type>
</CustomField>