force-app/main/default/objects/Project_Status_Assignments__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Assignment__r.pse__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>